refactor: remove glycemic index and load
